# squib

./: Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
canny/: circuit_operators.ipynb  operations.py  test.py  utils.py
notebooks/: experiments.py
qhed/: Decrement_Metrics.ipynb  Image_Encoding_Metrics.ipynb
qhed/img/: case-0_1.pgm  case-0_1.txt
scripts/: experiments.py
squib/: __init__.py  visualization.py
squib/acceleration/: __init__.py  device_setup.py
squib/evaluation/: __init__.py  knn.py  metrics.py  parse_results.py  parse_zardini.py
squib/qknn/: qknn.py
squib/qnn/: __init__.py  qnn.py
squib/quclidean/: __init__.py  quclidean.py
subcircuits/: test.py
subcircuits/qft/: qft.py  qft_inv.py
subcircuits/qpe/: qpe.py
subcircuits/stateprep/: stateprep.py
tests/: conftest.py  test_experiments.py  test_metrics.py  test_parse_zardini.py  test_qknn.py  test_qnn.py  test_quclidean.py  test_visualization.py
tests/test_files/: results.csv  results_processed.json  sample_config.json  zardini.csv
