[metadata]
name = qnn
version = attr:src.__version__
description = "Quantum k-nearest neighbors using qiskit"
long_description = file: README.md

[options]
include_packages_data = True
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    polars>=1.2
    qiskit
    scikit-learn>=1.4

max-line-length = 88